<resources>
    <string name="app_name">SmartyFridge</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="group_id">Group ID</string>
    <string name="create_account">CREATE ACCOUNT</string>

</resources>